src/emulator/asm/grammar/asmParser.ts
// Generated from asm.g4 by ANTLR 4.13.2
// noinspection ES6UnusedImports,JSUnusedGlobalSymbols,JSUnusedLocalSymbols

import {
  ATN,
  ATNDeserializer,
  DFA,
  FailedPredicateException,
  RecognitionException,
  NoViableAltException,
  BailErrorStrategy,
  Parser,
  ParserATNSimulator,
  RuleContext,
  ParserRuleContext,
  PredictionMode,
  PredictionContextCache,
  TerminalNode,
  RuleNode,
  Token,
  Interval,
  IntervalSet,
} from "antlr4";
import asmListener from "./asmListener.js";
import asmVisitor from "./asmVisitor.js";
import type { TokenStream } from "antlr4";
import type { DecisionState } from "antlr4";

// for running tests with parameters, TODO: discuss strategy for typed parameters in CI
// eslint-disable-next-line no-unused-vars
type int = number;

export default class asmParser extends Parser {
  public static readonly ADD = 1;
  public static readonly ADDC = 2;
  public static readonly AND = 3;
  public static readonly BR = 4;
  public static readonly CALL = 5;
  public static readonly CLC = 6;
  public static readonly CMC = 7;
  public static readonly CMP = 8;
  public static readonly COM = 9;
  public static readonly DEC = 10;
  public static readonly DIV = 11;
  public static readonly DSI = 12;
  public static readonly ENI = 13;
  public static readonly INC = 14;
  public static readonly INT = 15;
  public static readonly JMP = 16;
  public static readonly MOV = 17;
  public static readonly MUL = 18;
  public static readonly MVBH = 19;
  public static readonly MVBL = 20;
  public static readonly NEG = 21;
  public static readonly NOP = 22;
  public static readonly OR = 23;
  public static readonly POP = 24;
  public static readonly PUSH = 25;
  public static readonly RET = 26;
  public static readonly RETN = 27;
  public static readonly ROL = 28;
  public static readonly ROLC = 29;
  public static readonly ROR = 30;
  public static readonly RORC = 31;
  public static readonly RTI = 32;
  public static readonly SHL = 33;
  public static readonly SHLA = 34;
  public static readonly SHR = 35;
  public static readonly SHRA = 36;
  public static readonly STC = 37;
  public static readonly SUB = 38;
  public static readonly SUBB = 39;
  public static readonly TEST = 40;
  public static readonly XCH = 41;
  public static readonly XOR = 42;
  public static readonly ORIG = 43;
  public static readonly EQU = 44;
  public static readonly WORD = 45;
  public static readonly STR = 46;
  public static readonly TAB = 47;
  public static readonly REGISTER = 48;
  public static readonly MEM_POS = 49;
  public static readonly PC = 50;
  public static readonly SP = 51;
  public static readonly COND = 52;
  public static readonly COMMA = 53;
  public static readonly COLON = 54;
  public static readonly SEMICOLON = 55;
  public static readonly LBRACK = 56;
  public static readonly RBRACK = 57;
  public static readonly DOT = 58;
  public static readonly PLUS = 59;
  public static readonly MINUS = 60;
  public static readonly ID = 61;
  public static readonly DEC_VAL = 62;
  public static readonly HEX_VAL = 63;
  public static readonly BIN_VAL = 64;
  public static readonly OCT_VAL = 65;
  public static readonly CHAR_VAL = 66;
  public static readonly STRING = 67;
  public static readonly WS = 68;
  public static readonly COMMENT = 69;
  public static override readonly EOF = Token.EOF;
  public static readonly RULE_program = 0;
  public static readonly RULE_statement = 1;
  public static readonly RULE_instruction = 2;
  public static readonly RULE_instructionFormat = 3;
  public static readonly RULE_zeroOpInst = 4;
  public static readonly RULE_zeroOpMnemonic = 5;
  public static readonly RULE_zeroOpValueInst = 6;
  public static readonly RULE_zeroOpValueMnemonic = 7;
  public static readonly RULE_oneOpInst = 8;
  public static readonly RULE_oneOpMnemonic = 9;
  public static readonly RULE_oneOpValueInst = 10;
  public static readonly RULE_oneOpValueMnemonic = 11;
  public static readonly RULE_twoOpInst = 12;
  public static readonly RULE_twoOpMnemonic = 13;
  public static readonly RULE_jmpInst = 14;
  public static readonly RULE_jmpMnemonic = 15;
  public static readonly RULE_directive = 16;
  public static readonly RULE_origDirective = 17;
  public static readonly RULE_equDirective = 18;
  public static readonly RULE_wordDirective = 19;
  public static readonly RULE_strDirective = 20;
  public static readonly RULE_strDirectiveElement = 21;
  public static readonly RULE_tabDirective = 22;
  public static readonly RULE_operand = 23;
  public static readonly RULE_address = 24;
  public static readonly RULE_register = 25;
  public static readonly RULE_immediate = 26;
  public static readonly RULE_direct = 27;
  public static readonly RULE_registerIndirect = 28;
  public static readonly RULE_indexed = 29;
  public static readonly RULE_relative = 30;
  public static readonly RULE_based = 31;
  public static readonly RULE_const = 32;
  public static readonly literalNames: (string | null)[] = [
    null,
    "'ADD'",
    "'ADDC'",
    "'AND'",
    "'BR'",
    "'CALL'",
    "'CLC'",
    "'CMC'",
    "'CMP'",
    "'COM'",
    "'DEC'",
    "'DIV'",
    "'DSI'",
    "'ENI'",
    "'INC'",
    "'INT'",
    "'JMP'",
    "'MOV'",
    "'MUL'",
    "'MVBH'",
    "'MVBL'",
    "'NEG'",
    "'NOP'",
    "'OR'",
    "'POP'",
    "'PUSH'",
    "'RET'",
    "'RETN'",
    "'ROL'",
    "'ROLC'",
    "'ROR'",
    "'RORC'",
    "'RTI'",
    "'SHL'",
    "'SHLA'",
    "'SHR'",
    "'SHRA'",
    "'STC'",
    "'SUB'",
    "'SUBB'",
    "'TEST'",
    "'XCH'",
    "'XOR'",
    "'ORIG'",
    "'EQU'",
    "'WORD'",
    "'STR'",
    "'TAB'",
    null,
    "'M'",
    "'PC'",
    "'SP'",
    null,
    "','",
    "':'",
    "';'",
    "'['",
    "']'",
    "'.'",
    "'+'",
    "'-'",
  ];
  public static readonly symbolicNames: (string | null)[] = [
    null,
    "ADD",
    "ADDC",
    "AND",
    "BR",
    "CALL",
    "CLC",
    "CMC",
    "CMP",
    "COM",
    "DEC",
    "DIV",
    "DSI",
    "ENI",
    "INC",
    "INT",
    "JMP",
    "MOV",
    "MUL",
    "MVBH",
    "MVBL",
    "NEG",
    "NOP",
    "OR",
    "POP",
    "PUSH",
    "RET",
    "RETN",
    "ROL",
    "ROLC",
    "ROR",
    "RORC",
    "RTI",
    "SHL",
    "SHLA",
    "SHR",
    "SHRA",
    "STC",
    "SUB",
    "SUBB",
    "TEST",
    "XCH",
    "XOR",
    "ORIG",
    "EQU",
    "WORD",
    "STR",
    "TAB",
    "REGISTER",
    "MEM_POS",
    "PC",
    "SP",
    "COND",
    "COMMA",
    "COLON",
    "SEMICOLON",
    "LBRACK",
    "RBRACK",
    "DOT",
    "PLUS",
    "MINUS",
    "ID",
    "DEC_VAL",
    "HEX_VAL",
    "BIN_VAL",
    "OCT_VAL",
    "CHAR_VAL",
    "STRING",
    "WS",
    "COMMENT",
  ];
  // tslint:disable:no-trailing-whitespace
  public static readonly ruleNames: string[] = [
    "program",
    "statement",
    "instruction",
    "instructionFormat",
    "zeroOpInst",
    "zeroOpMnemonic",
    "zeroOpValueInst",
    "zeroOpValueMnemonic",
    "oneOpInst",
    "oneOpMnemonic",
    "oneOpValueInst",
    "oneOpValueMnemonic",
    "twoOpInst",
    "twoOpMnemonic",
    "jmpInst",
    "jmpMnemonic",
    "directive",
    "origDirective",
    "equDirective",
    "wordDirective",
    "strDirective",
    "strDirectiveElement",
    "tabDirective",
    "operand",
    "address",
    "register",
    "immediate",
    "direct",
    "registerIndirect",
    "indexed",
    "relative",
    "based",
    "const",
  ];
  public get grammarFileName(): string {
    return "asm.g4";
  }
  public get literalNames(): (string | null)[] {
    return asmParser.literalNames;
  }
  public get symbolicNames(): (string | null)[] {
    return asmParser.symbolicNames;
  }
  public get ruleNames(): string[] {
    return asmParser.ruleNames;
  }
  public get serializedATN(): number[] {
    return asmParser._serializedATN;
  }

  protected createFailedPredicateException(
    predicate?: string,
    message?: string,
  ): FailedPredicateException {
    return new FailedPredicateException(this, predicate, message);
  }

  constructor(input: TokenStream) {
    super(input);
    this._interp = new ParserATNSimulator(
      this,
      asmParser._ATN,
      asmParser.DecisionsToDFA,
      new PredictionContextCache(),
    );
  }
  // @RuleVersion(0)
  public program(): ProgramContext {
    let localctx: ProgramContext = new ProgramContext(
      this,
      this._ctx,
      this.state,
    );
    this.enterRule(localctx, 0, asmParser.RULE_program);
    let _la: number;
    try {
      this.enterOuterAlt(localctx, 1);
      {
        this.state = 69;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while (
          ((_la & ~0x1f) === 0 && ((1 << _la) & 4294967294) !== 0) ||
          (((_la - 32) & ~0x1f) === 0 && ((1 << (_la - 32)) & 536875007) !== 0)
        ) {
          {
            {
              this.state = 66;
              this.statement();
            }
          }
          this.state = 71;
          this._errHandler.sync(this);
          _la = this._input.LA(1);
        }
        this.state = 72;
        this.match(asmParser.EOF);
      }
    } catch (re) {
      if (re instanceof RecognitionException) {
        localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return localctx;
  }
  // @RuleVersion(0)
  public statement(): StatementContext {
    let localctx: StatementContext = new StatementContext(
      this,
      this._ctx,
      this.state,
    );
    this.enterRule(localctx, 2, asmParser.RULE_statement);
    try {
      this.state = 76;
      this._errHandler.sync(this);
      switch (this._interp.adaptivePredict(this._input, 1, this._ctx)) {
        case 1:
          this.enterOuterAlt(localctx, 1);
          {
            this.state = 74;
            this.instruction();
          }
          break;
        case 2:
          this.enterOuterAlt(localctx, 2);
          {
            this.state = 75;
            this.directive();
          }
          break;
      }
    } catch (re) {
      if (re instanceof RecognitionException) {
        localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return localctx;
  }
  // @RuleVersion(0)
  public instruction(): InstructionContext {
    let localctx: InstructionContext = new InstructionContext(
      this,
      this._ctx,
      this.state,
    );
    this.enterRule(localctx, 4, asmParser.RULE_instruction);
    let _la: number;
    try {
      this.enterOuterAlt(localctx, 1);
      {
        this.state = 80;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        if (_la === 61) {
          {
            this.state = 78;
            this.match(asmParser.ID);
            this.state = 79;
            this.match(asmParser.COLON);
          }
        }

        this.state = 82;
        this.instructionFormat();
      }
    } catch (re) {
      if (re instanceof RecognitionException) {
        localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return localctx;
  }
  // @RuleVersion(0)
  public instructionFormat(): InstructionFormatContext {
    let localctx: InstructionFormatContext = new InstructionFormatContext(
      this,
      this._ctx,
      this.state,
    );
    this.enterRule(localctx, 6, asmParser.RULE_instructionFormat);
    try {
      this.state = 90;
      this._errHandler.sync(this);
      switch (this._input.LA(1)) {
        case 6:
        case 7:
        case 12:
        case 13:
        case 22:
        case 26:
        case 32:
        case 37:
          this.enterOuterAlt(localctx, 1);
          {
            this.state = 84;
            this.zeroOpInst();
          }
          break;
        case 15:
        case 27:
          this.enterOuterAlt(localctx, 2);
          {
            this.state = 85;
            this.zeroOpValueInst();
          }
          break;
        case 9:
        case 10:
        case 14:
        case 21:
        case 24:
        case 25:
          this.enterOuterAlt(localctx, 3);
          {
            this.state = 86;
            this.oneOpInst();
          }
          break;
        case 28:
        case 29:
        case 30:
        case 31:
        case 33:
        case 34:
        case 35:
        case 36:
          this.enterOuterAlt(localctx, 4);
          {
            this.state = 87;
            this.oneOpValueInst();
          }
          break;
        case 1:
        case 2:
        case 3:
        case 8:
        case 11:
        case 17:
        case 18:
        case 19:
        case 20:
        case 23:
        case 38:
        case 39:
        case 40:
        case 41:
        case 42:
          this.enterOuterAlt(localctx, 5);
          {
            this.state = 88;
            this.twoOpInst();
          }
          break;
        case 4:
        case 5:
        case 16:
          this.enterOuterAlt(localctx, 6);
          {
            this.state = 89;
            this.jmpInst();
          }
          break;
        default:
          throw new NoViableAltException(this);
      }
    } catch (re) {
      if (re instanceof RecognitionException) {
        localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return localctx;
  }
  // @RuleVersion(0)
  public zeroOpInst(): ZeroOpInstContext {
    let localctx: ZeroOpInstContext = new ZeroOpInstContext(
      this,
      this._ctx,
      this.state,
    );
    this.enterRule(localctx, 8, asmParser.RULE_zeroOpInst);
    try {
      this.enterOuterAlt(localctx, 1);
      {
        this.state = 92;
        this.zeroOpMnemonic();
      }
    } catch (re) {
      if (re instanceof RecognitionException) {
        localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return localctx;
  }
  // @RuleVersion(0)
  public zeroOpMnemonic(): ZeroOpMnemonicContext {
    let localctx: ZeroOpMnemonicContext = new ZeroOpMnemonicContext(
      this,
      this._ctx,
      this.state,
    );
    this.enterRule(localctx, 10, asmParser.RULE_zeroOpMnemonic);
    let _la: number;
    try {
      this.enterOuterAlt(localctx, 1);
      {
        this.state = 94;
        _la = this._input.LA(1);
        if (
          !(((_la - 6) & ~0x1f) === 0 && ((1 << (_la - 6)) & 2215706819) !== 0)
        ) {
          this._errHandler.recoverInline(this);
        } else {
          this._errHandler.reportMatch(this);
          this.consume();
        }
      }
    } catch (re) {
      if (re instanceof RecognitionException) {
        localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return localctx;
  }
  // @RuleVersion(0)
  public zeroOpValueInst(): ZeroOpValueInstContext {
    let localctx: ZeroOpValueInstContext = new ZeroOpValueInstContext(
      this,
      this._ctx,
      this.state,
    );
    this.enterRule(localctx, 12, asmParser.RULE_zeroOpValueInst);
    try {
      this.enterOuterAlt(localctx, 1);
      {
        this.state = 96;
        this.zeroOpValueMnemonic();
        this.state = 97;
        this.const_();
      }
    } catch (re) {
      if (re instanceof RecognitionException) {
        localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return localctx;
  }
  // @RuleVersion(0)
  public zeroOpValueMnemonic(): ZeroOpValueMnemonicContext {
    let localctx: ZeroOpValueMnemonicContext = new ZeroOpValueMnemonicContext(
      this,
      this._ctx,
      this.state,
    );
    this.enterRule(localctx, 14, asmParser.RULE_zeroOpValueMnemonic);
    let _la: number;
    try {
      this.enterOuterAlt(localctx, 1);
      {
        this.state = 99;
        _la = this._input.LA(1);
        if (!(_la === 15 || _la === 27)) {
          this._errHandler.recoverInline(this);
        } else {
          this._errHandler.reportMatch(this);
          this.consume();
        }
      }
    } catch (re) {
      if (re instanceof RecognitionException) {
        localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return localctx;
  }
  // @RuleVersion(0)
  public oneOpInst(): OneOpInstContext {
    let localctx: OneOpInstContext = new OneOpInstContext(
      this,
      this._ctx,
      this.state,
    );
    this.enterRule(localctx, 16, asmParser.RULE_oneOpInst);
    try {
      this.enterOuterAlt(localctx, 1);
      {
        this.state = 101;
        this.oneOpMnemonic();
        this.state = 102;
        this.operand();
      }
    } catch (re) {
      if (re instanceof RecognitionException) {
        localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return localctx;
  }
  // @RuleVersion(0)
  public oneOpMnemonic(): OneOpMnemonicContext {
    let localctx: OneOpMnemonicContext = new OneOpMnemonicContext(
      this,
      this._ctx,
      this.state,
    );
    this.enterRule(localctx, 18, asmParser.RULE_oneOpMnemonic);
    let _la: number;
    try {
      this.enterOuterAlt(localctx, 1);
      {
        this.state = 104;
        _la = this._input.LA(1);
        if (!((_la & ~0x1f) === 0 && ((1 << _la) & 52446720) !== 0)) {
          this._errHandler.recoverInline(this);
        } else {
          this._errHandler.reportMatch(this);
          this.consume();
        }
      }
    } catch (re) {
      if (re instanceof RecognitionException) {
        localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return localctx;
  }
  // @RuleVersion(0)
  public oneOpValueInst(): OneOpValueInstContext {
    let localctx: OneOpValueInstContext = new OneOpValueInstContext(
      this,
      this._ctx,
      this.state,
    );
    this.enterRule(localctx, 20, asmParser.RULE_oneOpValueInst);
    try {
      this.enterOuterAlt(localctx, 1);
      {
        this.state = 106;
        this.oneOpValueMnemonic();
        this.state = 107;
        this.operand();
        this.state = 108;
        this.match(asmParser.COMMA);
        this.state = 109;
        this.const_();
      }
    } catch (re) {
      if (re instanceof RecognitionException) {
        localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return localctx;
  }
  // @RuleVersion(0)
  public oneOpValueMnemonic(): OneOpValueMnemonicContext {
    let localctx: OneOpValueMnemonicContext = new OneOpValueMnemonicContext(
      this,
      this._ctx,
      this.state,
    );
    this.enterRule(localctx, 22, asmParser.RULE_oneOpValueMnemonic);
    let _la: number;
    try {
      this.enterOuterAlt(localctx, 1);
      {
        this.state = 111;
        _la = this._input.LA(1);
        if (!(((_la - 28) & ~0x1f) === 0 && ((1 << (_la - 28)) & 495) !== 0)) {
          this._errHandler.recoverInline(this);
        } else {
          this._errHandler.reportMatch(this);
          this.consume();
        }
      }
    } catch (re) {
      if (re instanceof RecognitionException) {
        localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return localctx;
  }
  // @RuleVersion(0)
  public twoOpInst(): TwoOpInstContext {
    let localctx: TwoOpInstContext = new TwoOpInstContext(
      this,
      this._ctx,
      this.state,
    );
    this.enterRule(localctx, 24, asmParser.RULE_twoOpInst);
    try {
      this.enterOuterAlt(localctx, 1);
      {
        this.state = 113;
        this.twoOpMnemonic();
        this.state = 114;
        this.operand();
        this.state = 115;
        this.match(asmParser.COMMA);
        this.state = 116;
        this.operand();
      }
    } catch (re) {
      if (re instanceof RecognitionException) {
        localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return localctx;
  }
  // @RuleVersion(0)
  public twoOpMnemonic(): TwoOpMnemonicContext {
    let localctx: TwoOpMnemonicContext = new TwoOpMnemonicContext(
      this,
      this._ctx,
      this.state,
    );
    this.enterRule(localctx, 26, asmParser.RULE_twoOpMnemonic);
    let _la: number;
    try {
      this.enterOuterAlt(localctx, 1);
      {
        this.state = 118;
        _la = this._input.LA(1);
        if (
          !(
            ((_la & ~0x1f) === 0 && ((1 << _la) & 10357006) !== 0) ||
            (((_la - 38) & ~0x1f) === 0 && ((1 << (_la - 38)) & 31) !== 0)
          )
        ) {
          this._errHandler.recoverInline(this);
        } else {
          this._errHandler.reportMatch(this);
          this.consume();
        }
      }
    } catch (re) {
      if (re instanceof RecognitionException) {
        localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return localctx;
  }
  // @RuleVersion(0)
  public jmpInst(): JmpInstContext {
    let localctx: JmpInstContext = new JmpInstContext(
      this,
      this._ctx,
      this.state,
    );
    this.enterRule(localctx, 28, asmParser.RULE_jmpInst);
    let _la: number;
    try {
      this.enterOuterAlt(localctx, 1);
      {
        this.state = 120;
        this.jmpMnemonic();
        this.state = 123;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        if (_la === 58) {
          {
            this.state = 121;
            this.match(asmParser.DOT);
            this.state = 122;
            this.match(asmParser.COND);
          }
        }

        this.state = 125;
        this.operand();
      }
    } catch (re) {
      if (re instanceof RecognitionException) {
        localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return localctx;
  }
  // @RuleVersion(0)
  public jmpMnemonic(): JmpMnemonicContext {
    let localctx: JmpMnemonicContext = new JmpMnemonicContext(
      this,
      this._ctx,
      this.state,
    );
    this.enterRule(localctx, 30, asmParser.RULE_jmpMnemonic);
    let _la: number;
    try {
      this.enterOuterAlt(localctx, 1);
      {
        this.state = 127;
        _la = this._input.LA(1);
        if (!((_la & ~0x1f) === 0 && ((1 << _la) & 65584) !== 0)) {
          this._errHandler.recoverInline(this);
        } else {
          this._errHandler.reportMatch(this);
          this.consume();
        }
      }
    } catch (re) {
      if (re instanceof RecognitionException) {
        localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return localctx;
  }
  // @RuleVersion(0)
  public directive(): DirectiveContext {
    let localctx: DirectiveContext = new DirectiveContext(
      this,
      this._ctx,
      this.state,
    );
    this.enterRule(localctx, 32, asmParser.RULE_directive);
    try {
      this.state = 134;
      this._errHandler.sync(this);
      switch (this._interp.adaptivePredict(this._input, 5, this._ctx)) {
        case 1:
          this.enterOuterAlt(localctx, 1);
          {
            this.state = 129;
            this.origDirective();
          }
          break;
        case 2:
          this.enterOuterAlt(localctx, 2);
          {
            this.state = 130;
            this.equDirective();
          }
          break;
        case 3:
          this.enterOuterAlt(localctx, 3);
          {
            this.state = 131;
            this.wordDirective();
          }
          break;
        case 4:
          this.enterOuterAlt(localctx, 4);
          {
            this.state = 132;
            this.strDirective();
          }
          break;
        case 5:
          this.enterOuterAlt(localctx, 5);
          {
            this.state = 133;
            this.tabDirective();
          }
          break;
      }
    } catch (re) {
      if (re instanceof RecognitionException) {
        localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return localctx;
  }
  // @RuleVersion(0)
  public origDirective(): OrigDirectiveContext {
    let localctx: OrigDirectiveContext = new OrigDirectiveContext(
      this,
      this._ctx,
      this.state,
    );
    this.enterRule(localctx, 34, asmParser.RULE_origDirective);
    try {
      this.enterOuterAlt(localctx, 1);
      {
        this.state = 136;
        this.match(asmParser.ORIG);
        this.state = 139;
        this._errHandler.sync(this);
        switch (this._input.LA(1)) {
          case 62:
          case 63:
          case 64:
          case 65:
          case 66:
            {
              this.state = 137;
              this.const_();
            }
            break;
          case 61:
            {
              this.state = 138;
              this.match(asmParser.ID);
            }
            break;
          default:
            throw new NoViableAltException(this);
        }
      }
    } catch (re) {
      if (re instanceof RecognitionException) {
        localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return localctx;
  }
  // @RuleVersion(0)
  public equDirective(): EquDirectiveContext {
    let localctx: EquDirectiveContext = new EquDirectiveContext(
      this,
      this._ctx,
      this.state,
    );
    this.enterRule(localctx, 36, asmParser.RULE_equDirective);
    try {
      this.enterOuterAlt(localctx, 1);
      {
        this.state = 141;
        this.match(asmParser.ID);
        this.state = 142;
        this.match(asmParser.EQU);
        this.state = 143;
        this.const_();
      }
    } catch (re) {
      if (re instanceof RecognitionException) {
        localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return localctx;
  }
  // @RuleVersion(0)
  public wordDirective(): WordDirectiveContext {
    let localctx: WordDirectiveContext = new WordDirectiveContext(
      this,
      this._ctx,
      this.state,
    );
    this.enterRule(localctx, 38, asmParser.RULE_wordDirective);
    try {
      this.enterOuterAlt(localctx, 1);
      {
        this.state = 145;
        this.match(asmParser.ID);
        this.state = 146;
        this.match(asmParser.WORD);
        this.state = 147;
        this.const_();
      }
    } catch (re) {
      if (re instanceof RecognitionException) {
        localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return localctx;
  }
  // @RuleVersion(0)
  public strDirective(): StrDirectiveContext {
    let localctx: StrDirectiveContext = new StrDirectiveContext(
      this,
      this._ctx,
      this.state,
    );
    this.enterRule(localctx, 40, asmParser.RULE_strDirective);
    let _la: number;
    try {
      this.enterOuterAlt(localctx, 1);
      {
        this.state = 149;
        this.match(asmParser.ID);
        this.state = 150;
        this.match(asmParser.STR);
        this.state = 151;
        this.strDirectiveElement();
        this.state = 156;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while (_la === 53) {
          {
            {
              this.state = 152;
              this.match(asmParser.COMMA);
              this.state = 153;
              this.strDirectiveElement();
            }
          }
          this.state = 158;
          this._errHandler.sync(this);
          _la = this._input.LA(1);
        }
      }
    } catch (re) {
      if (re instanceof RecognitionException) {
        localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
